      False. Example calls:
      _('This will NOT get parsed/formatted by MoinMoin!')
      _('This will be parsed/formatted by MoinMoin!', wiki=True)
      _('This will be used as a left side of percent operator. %s',
        wiki=True, percent=True)
    * Page.url 'relative' keyword param (default: True in 1.6 and early 1.7)
      was changed to default False).

  New Features:
    * new powerful and flexible logging, please see wiki/config/logging/.
    * moin now logs the path from where it loaded its configuration(s)
    * cfg.trusted_auth_methods is a list of auth methods that put an
      authenticated user into the "Trusted" ACL group.
    * new authentication plugin system, see HelpOnAuthentication
    * new session handling system (no moin_session any more, now done
      internally and automatically), see HelpOnSessions for details.
    * new preferences plugin system, see MoinMoin/userprefs/__init__.py
    * new notification system with an optional jabber notification bot
    * jabber notification support; for more information see:
      http://moinmo.in/MoinMoinTodo/Release_1.7/HelpOnNotification
    * standalone server can now be started via the "moin" script command,
      optionally backgrounding itself. See: moin server standalone --help
    * the diff action now has navigation buttons for prev/next change
    * admonition support. Added styling for tip, note, important, warning 
      and caution in the modern theme. For more info see:
      http://moinmo.in/MoinMoinTodo/Release%201.7/HelpOnAdmonitions
    * admonitions .
    * DocBook-formatter supports HTML entities like &rarr; and &#9731;
    * DocBook-formatter supports the FootNote macro
    * DocBook-formatter supports bulletless lists
    * DocBook-formatter has support for admonitions
    * DocBook-formatter will export the edithistory inside as the generated 
      article's revision history. Doesn't add history of included pages.