@@ -1,12 +1,17 @@
 In this directory is a collection of pre-made logging configuration files.
 
-You can use them like this:
+Typically, your server adaptor script (e.g. moin.cgi) will have this:
 
 from MoinMoin import log
-log.load_config('.../wiki/config/logging/conffile')
+log.load_config('wiki/config/logging/logfile') # XXX please fix this path!
 
-This is usually located somewhere at the begging of the server script you use,
-e.g. in moin.cgi, if you use cgi.
+You have to fix that path to use a logging configuration matching your
+needs (we provide some examples in the path given there, it is relative to
+the uncompressed moin distribution archive - if you use some moin package,
+you maybe find it under /usr/share/moin/).
+
+It is likely that you also have to edit the sample logging configurations
+we provide (e.g. to fix the logfile location).
 
 If you don't configure logging using those lines, moin will use some built-in
 logging configuration (which might be correct for some cases, but incorrect
